--- a/index.html
+++ b/index.html
@@ -5,27 +5,43 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="reset.css">
     <link href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm"
         crossorigin="anonymous">
+    <link rel="stylesheet" href="style.css">
+    <link href="https://fonts.googleapis.com/css?family=Bangers" rel="stylesheet">
     <title>Giphy!</title>
 </head>
 
 <body>
-
-    <div id="animeButtons">
-        <!-- <button data-anime="animeGifs"></button> -->
+    <div class="jumbotron">
+        <h1 class="header">Anime[tion]</h1>
     </div>
 
-    <form id="giphySearch">
-        <label for="giphy-input">Search an anime..</label>
-        <input type="text" id="anime-input"><br>
+    <div container>
+        <div class="row">
+            <div class="col-lg-1"></div>
+            <div class="col-lg-3">
+                <form id="giphySearch">
+                    <label for="giphy-input">Search an anime:</label>
+                    <input type="text" id="anime-input">
 
-        <input id="addAnime" type="submit" value="Submit">
-    </form>
+                    <input id="addAnime" type="submit" value="Submit">
+                </form>
+            </div>
+            <div class="col-lg-7">
+                <div id="animeButtons">
+                </div>
 
-    <div id="anime"></div>
+
+                <div id="anime"></div>
+            </div>
+            <div class="col-lg-1"></div>
+
+        </div>
+    </div>
+    </div>
+
 
 
     <script src=https://api.giphy.com/v1/gifs/search?q=&api_key=i6vOozTBU9UJ1TI9engqSoOHiHyrH9dt></script>
